Fix layout issues and adjust message alignment

--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -103,6 +103,8 @@
     background: #007aff;
     color: white;
     align-self: flex-end;
+    justify-content: flex-end;
+    flex-direction: row-reverse;
     text-align: right;
 }
 
